# opencode-agents

./: .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml
.opencode/skills/skill-codemod/: SKILL.md  codemod_agent.py
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  QUICKSTART.md
src/opencode_agents/: __main__.py  base_agent.py  llm.py  models.py  tools.py  workspace.py
src/opencode_agents/agents/: coder.py  critic.py  orchestrator.py  planner.py  reviewer.py
